@@ -1,3 +1,9 @@
+2011-02-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (*soap-current-wsdl*): renamed from
+	`*current-wsdl*'
+	(soap-invoke): changed url-package-name to "soap-client.el"
+
 2011-02-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el: added commentary section
